--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -1,4 +1,22 @@
-@import "../css/product-main/product-main.css"
-@import "../css/product-main/__description/product-main__description.css"
-@import "../css/product-main/__can-body/product-main__can-body.css"
-@import "../css/product-main/__can-lid/product-main__can-lid.css"
+@import "../css/page-wrapper/product-main/product-main.css"
+@import "../css/page-wrapper/product-main/__description/product-main__description.css"
+@import "../css/page-wrapper/product-main/__can-body/product-main__can-body.css"
+@import "../css/page-wrapper/product-main/__can-lid/product-main__can-lid.css"
+@import "../css/page-wrapper/product-main/__notification/product-main__notification.css"
+@import "../css/page-wrapper/product-main/__arrow/product-main__arrow.css"
+@import "../css/page-wrapper/product-main/__text/product-main__text.css"
+@import "../css/page-wrapper/product-main/__product-image/product-main__product-image.css"
+@import "../css/page-wrapper/product-main/__comment/product-main__comment.css"
+@import "../css/page-wrapper/product-main/__title/product-main__title.css"
+@import "../css/page-wrapper/links/links.css"
+@import "../css/page-wrapper/links/__socials-item/links__socials-item.css"
+@import "../css/page-wrapper/links/__socials/links__socials.css"
+@import "../css/page-wrapper/page-wrapper.css"
+@import "../css/page-wrapper/links/__logo-content/links__logo-content.css"
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
+
+p, h1, h2, h3
+  font-family: "Roboto"
+
+body
+  margin: 0
