--- a/css/page-wrapper/product-main/__comment/product-main__comment.css
+++ b/css/page-wrapper/product-main/__comment/product-main__comment.css
@@ -1,6 +1,8 @@
 .product-main__comment{
     margin-bottom: 30px;
     margin-left: 130px;
+
+    padding-right: 200px;
 }
 
 .product-main__comment p{
