--- a/css/page-wrapper/product-main/__product-image/product-main__product-image.css
+++ b/css/page-wrapper/product-main/__product-image/product-main__product-image.css
@@ -1,9 +1,11 @@
 .product-main__product-image{
     margin-left: 300px;
+    transition-duration: 0.3s;
 }
 
 .product-main__product-image:hover{
     -webkit-filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
     filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
+    transform: scale(1.05, 1.05);
     transition-duration: 0.3s;
 }
