--- a/css/page-wrapper/page-wrapper.css
+++ b/css/page-wrapper/page-wrapper.css
@@ -1,3 +1,6 @@
 .page-wrapper{
     background-image: url("../../img/background.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
 }
