--- a/css/page-wrapper/product/product-main/__product-image/product-main__product-image.css
+++ b/css/page-wrapper/product/product-main/__product-image/product-main__product-image.css
@@ -8,4 +8,13 @@
     filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
     transform: scale(1.05, 1.05);
     transition-duration: 0.3s;
+    cursor: pointer;
+}
+
+.blurred{
+    /*-webkit-filter: blur(4px);
+    -moz-filter: blur(4px);
+    -ms-filter: blur(4px);
+    -o-filter: blur(4px);*/
+    filter: blur(4px);
 }
