--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -23,6 +23,8 @@
 @import "../css/presentation/presentation-main/__video/presentation__video.css"
 @import "../css/presentation/presentation-main/__popup-menu/presentation__popup-menu.css"
 @import "../css/presentation/presentation-main/__back/presentation__back.css"
+@import "../css/presentation/presentation-main/__back-title/presentation__back-title.css"
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
 
 p, h1, h2, h3
