--- a/css/page-wrapper/product/product-main/__title/product-main__title.css
+++ b/css/page-wrapper/product/product-main/__title/product-main__title.css
@@ -1,7 +1,9 @@
 .product-main__title{
-    margin-left: 130px;
+    margin-left: 100px;
+
+    padding-right: 100px;
 }
 
 .product-main__title h1{
-    font-size: 60px;
+    font-size: 54px;
 }
