--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -14,6 +14,8 @@
 @import "../css/page-wrapper/product/links/__socials-item/links__socials-item.css"
 @import "../css/page-wrapper/product/links/__socials/links__socials.css"
 @import "../css/page-wrapper/product/links/__logo-content/links__logo-content.css"
+@import "../css/powder/powder.css"
+@import "../css/powder/__canvas/powder__canvas.css"
 @import "../css/presentation/presentation.css"
 @import "../css/presentation/presentation-main/__socials/presentation__socials.css"
 @import "../css/presentation/presentation-main/__socials-item/presentation__socials-item.css"
