--- a/css/presentation/presentation-main/__popup-menu/presentation__popup-menu.css
+++ b/css/presentation/presentation-main/__popup-menu/presentation__popup-menu.css
@@ -6,6 +6,8 @@
     bottom: 0;
     text-align: center;
     backdrop-filter: brightness(20%);
+
+    height: 920px;
 }
 
 .presentation__popup-menu--hidden{
