--- a/css/presentation/presentation-main/__video/presentation__video.css
+++ b/css/presentation/presentation-main/__video/presentation__video.css
@@ -1,9 +1,4 @@
 .presentation__video{
-    margin: 0 auto 5px;
-    width: 100%;
-}
-
-.presentation__video video{
-    width: 100%;
-    height: auto;
+    margin: 0 auto 0;
+    width: 90%;
 }
