--- a/css/page-wrapper/product/product-main/product-main.css
+++ b/css/page-wrapper/product/product-main/product-main.css
@@ -1,6 +1,6 @@
 .product-main{
     margin: 0 auto 5px;
-    padding-top: 60px;
+    /*padding-top: 60px;*/
     max-width: 1400px;
 
     display: flex;
