--- a/css/page-wrapper/page-wrapper.css
+++ b/css/page-wrapper/page-wrapper.css
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .page-wrapper--hidden{
