--- a/styles/max-life.css
+++ b/styles/max-life.css
@@ -16,6 +16,17 @@
 @import url(../css/page-wrapper/product/links/__logo-content/links__logo-content.css);
 @import url(../css/powder/powder.css);
 @import url(../css/powder/__canvas/powder__canvas.css);
+@import url(../css/ingredients/ingredients.css);
+@import url(../css/ingredients/ingredients-main/ingredients-main.css);
+@import url(../css/ingredients/ingredients-main/__description/ingredients__description.css);
+@import url(../css/ingredients/ingredients-main/__names/ingredients__names.css);
+@import url(../css/ingredients/ingredients-main/__names-item/ingredients__names-item.css);
+@import url(../css/ingredients/ingredients-main/__socials/ingredients__socials.css);
+@import url(../css/ingredients/ingredients-main/__hint/ingredients__hint.css);
+@import url(../css/ingredients/ingredients-main/__hint-text/ingredients__hint-text.css);
+@import url(../css/ingredients/ingredients-main/__logo/ingredients__logo.css);
+@import url(../css/ingredients/ingredients-main/__numbers/ingredients__numbers.css);
+@import url(../css/ingredients/ingredients-main/__numbers-item/ingredients__numbers-item.css);
 @import url(../css/presentation/presentation.css);
 @import url(../css/presentation/presentation-main/__socials/presentation__socials.css);
 @import url(../css/presentation/presentation-main/__socials-item/presentation__socials-item.css);
