--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -16,6 +16,17 @@
 @import "../css/page-wrapper/product/links/__logo-content/links__logo-content.css"
 @import "../css/powder/powder.css"
 @import "../css/powder/__canvas/powder__canvas.css"
+@import "../css/ingredients/ingredients.css"
+@import "../css/ingredients/ingredients-main/ingredients-main.css"
+@import "../css/ingredients/ingredients-main/__description/ingredients__description.css"
+@import "../css/ingredients/ingredients-main/__names/ingredients__names.css"
+@import "../css/ingredients/ingredients-main/__names-item/ingredients__names-item.css"
+@import "../css/ingredients/ingredients-main/__socials/ingredients__socials.css"
+@import "../css/ingredients/ingredients-main/__hint/ingredients__hint.css"
+@import "../css/ingredients/ingredients-main/__hint-text/ingredients__hint-text.css"
+@import "../css/ingredients/ingredients-main/__logo/ingredients__logo.css"
+@import "../css/ingredients/ingredients-main/__numbers/ingredients__numbers.css"
+@import "../css/ingredients/ingredients-main/__numbers-item/ingredients__numbers-item.css"
 @import "../css/presentation/presentation.css"
 @import "../css/presentation/presentation-main/__socials/presentation__socials.css"
 @import "../css/presentation/presentation-main/__socials-item/presentation__socials-item.css"
