--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -19,6 +19,7 @@
 @import "../css/ingredients/ingredients.css"
 @import "../css/ingredients/ingredients-main/ingredients-main.css"
 @import "../css/ingredients/ingredients-main/__description/ingredients__description.css"
+@import "../css/ingredients/ingredients-main/__show/ingredients__show.css"
 @import "../css/ingredients/ingredients-main/__names/ingredients__names.css"
 @import "../css/ingredients/ingredients-main/__names-item/ingredients__names-item.css"
 @import "../css/ingredients/ingredients-main/__socials/ingredients__socials.css"
@@ -37,6 +38,10 @@
 @import "../css/presentation/presentation-main/__popup-menu/presentation__popup-menu.css"
 @import "../css/presentation/presentation-main/__back/presentation__back.css"
 @import "../css/presentation/presentation-main/__back-title/presentation__back-title.css"
+@import "../css/ingredients/ingredients-main/__number/ingredients__number.css"
+@import "../css/ingredients/ingredients-main/__number-image/ingredients__number-image.css"
+@import "../css/ingredients/ingredients-main/__numbers-container/numbers/numbers.css"
+@import "../css/ingredients/ingredients-main/__numbers-container/ingredients__numbers-container.css"
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
 
