--- a/css/ingredients/ingredients.css
+++ b/css/ingredients/ingredients.css
@@ -1,6 +1,7 @@
 .ingredients{
-    max-height: 1000px;
-    width: 100%;
+    max-height: 1080px;
+    height: 100%;
+    width: auto;
 
     display: flex;
     flex-direction: row;
@@ -8,10 +9,11 @@
     align-items: center;
 
     background-image: url("../../img/ingredients_background.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
+
+    background-size: cover;
     background-origin: border-box;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .ingredients--hidden{
