--- a/css/powder/__canvas/powder__canvas.css
+++ b/css/powder/__canvas/powder__canvas.css
@@ -1,8 +1,9 @@
 .powder__canvas{
     width: 1920px;
-    height: 1280px;
+    height: 100%;
+    min-height: 100%;
+    margin: 0 auto 0;
+
+    max-width: 1920px;
 }
 
-.powder__canvas--hidden{
-    display: none;
-}
