--- a/styles/max-life.css
+++ b/styles/max-life.css
@@ -46,7 +46,20 @@
 p, h1, h2, h3 {
   font-family: "Roboto"; }
 
+html {
+  height: 100%; }
+
 body {
-  margin: 0; }
+  margin: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100%;
+  height: 100%; }
+
+.product-body {
+  background-image: url("../img/background.png"); }
+
+.ing-body {
+  background-image: url("../img/ingredients_background.png"); }
 
 /*# sourceMappingURL=max-life.css.map */
