--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -48,5 +48,18 @@
 p, h1, h2, h3
   font-family: "Roboto"
 
+html
+  height: 100%
+
 body
   margin: 0
+  background-size: cover
+  background-repeat: no-repeat
+  min-height: 100%
+  height: 100%
+
+.product-body
+  background-image: url("../img/background.png")
+
+.ing-body
+  background-image: url("../img/ingredients_background.png")
