--- a/css/page-wrapper/product/links/__socials/links__socials.css
+++ b/css/page-wrapper/product/links/__socials/links__socials.css
@@ -1,5 +1,6 @@
 .links__socials {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
+    width: 300px;
 }
