--- a/css/page-wrapper/product/product-main/__can-lid/product-main__can-lid.css
+++ b/css/page-wrapper/product/product-main/__can-lid/product-main__can-lid.css
@@ -1,5 +1,5 @@
 .product-main__can-lid{
-   transform: translate(1px, 60px);
+   transform: translate(1px, 80%);
 }
 
 .product-main__can-lid--hanged{
