--- a/css/page-wrapper/product/links/links.css
+++ b/css/page-wrapper/product/links/links.css
@@ -3,7 +3,16 @@
     flex-direction: column;
     align-items: flex-end;
 
-    margin-right: 150px;
+    margin-right: 10%;
 
-    transform: translate(0px, -100px);
+    transform: translate(0px, -50px);
+}
+
+@media all and (max-width: 1000px){
+    .links{
+        margin-top: 30px;
+        align-items: center;
+        margin-right: 0;
+        transform: translate(0px, 0px);
+    }
 }
