--- a/css/page-wrapper/product/product-main/__notification/product-main__notification.css
+++ b/css/page-wrapper/product/product-main/__notification/product-main__notification.css
@@ -2,6 +2,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+    width: 350px;
 
-    transform: translate(-30px, 0px);
+
+    transform: translate(-10px, 0px);
+}
+
+@media all and (max-width: 1000px) {
+    .product-main__notification{
+        width: 250px;
+    }
 }
