--- a/css/page-wrapper/product/product-main/__product-image/product-main__product-image.css
+++ b/css/page-wrapper/product/product-main/__product-image/product-main__product-image.css
@@ -1,8 +1,9 @@
 .product-main__product-image{
-    margin-left: 400px;
-    margin-top: 30px;
+    margin-left: 20%;
+    margin-top: 80px;
     transition-duration: 0.3s;
-    width: 500px;
+    min-width: 300px;
+    max-width: 300px;
 }
 
 .product-main__product-image:hover{
@@ -15,4 +16,14 @@
 
 .blurred{
     filter: blur(4px);
+}
+
+@media all and (max-width: 1000px){
+    .product-main__product-image{
+        margin-left: 0;
+        margin-top: 0;
+        transition-duration: 0.3s;
+        min-width: 300px;
+        max-width: 300px;
+    }
 }
