--- a/css/powder/__canvas/powder__canvas.css
+++ b/css/powder/__canvas/powder__canvas.css
@@ -1,9 +1,9 @@
 .powder__canvas{
-    width: 1920px;
+    width: 100%;
     height: 100%;
     min-height: 100%;
     margin: 0 auto 0;
 
-    max-width: 1920px;
+    min-width: 100%;
 }
 
