--- a/styles/max-life.css
+++ b/styles/max-life.css
@@ -10,6 +10,7 @@
 @import url(../css/page-wrapper/product/product-main/__product-image/product-main__product-image.css);
 @import url(../css/page-wrapper/product/product-main/__comment/product-main__comment.css);
 @import url(../css/page-wrapper/product/product-main/__title/product-main__title.css);
+@import url(../css/page-wrapper/product/product-main/__call/product-main__call.css);
 @import url(../css/page-wrapper/product/links/links.css);
 @import url(../css/page-wrapper/product/links/__socials-item/links__socials-item.css);
 @import url(../css/page-wrapper/product/links/__socials/links__socials.css);
@@ -53,6 +54,8 @@ body {
   margin: 0;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: top;
   min-height: 100%;
   height: 100%; }
 
