--- a/css/page-wrapper/product/links/__logo-content/links__logo-content.css
+++ b/css/page-wrapper/product/links/__logo-content/links__logo-content.css
@@ -1,3 +1,13 @@
 .links__logo-content{
     margin-bottom: 32px;
 }
+
+@media all and (min-width: 2500px) {
+    .links__logo-content{
+        width: 300px;
+    }
+
+    .links__logo-content img{
+        width: 300px;
+    }
+}
