--- a/styles/max-life.css
+++ b/styles/max-life.css
@@ -15,6 +15,7 @@
 @import url(../css/page-wrapper/product/links/__socials-item/links__socials-item.css);
 @import url(../css/page-wrapper/product/links/__socials/links__socials.css);
 @import url(../css/page-wrapper/product/links/__logo-content/links__logo-content.css);
+@import url(../css/page-wrapper/product/links/__logo/links__logo.css);
 @import url(../css/powder/powder.css);
 @import url(../css/powder/__canvas/powder__canvas.css);
 @import url(../css/ingredients/ingredients.css);
