--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -15,6 +15,7 @@
 @import "../css/page-wrapper/product/links/__socials-item/links__socials-item.css"
 @import "../css/page-wrapper/product/links/__socials/links__socials.css"
 @import "../css/page-wrapper/product/links/__logo-content/links__logo-content.css"
+@import "../css/page-wrapper/product/links/__logo/links__logo.css"
 @import "../css/powder/powder.css"
 @import "../css/powder/__canvas/powder__canvas.css"
 @import "../css/ingredients/ingredients.css"
