--- a/css/ingredients/ingredients-main/__logo/ingredients__logo.css
+++ b/css/ingredients/ingredients-main/__logo/ingredients__logo.css
@@ -5,3 +5,9 @@
 .ingredients__logo img{
     width: 160px;
 }
+
+@media all and (max-width: 1450px) and (min-width: 1000px){
+    .ingredients__logo img{
+        width: 120px;
+    }
+}
