--- a/css/page-wrapper/product/product-main/__description/product-main__description.css
+++ b/css/page-wrapper/product/product-main/__description/product-main__description.css
@@ -17,6 +17,10 @@
     }
 }
 
+@media all and (max-width: 1450px) and (min-width: 1000px){
+
+}
+
 @media all and (min-width: 2500px){
     .product-main__description{
         max-width: 800px;
