--- a/css/ingredients/ingredients-main/__hint-text/ingredients__hint-text.css
+++ b/css/ingredients/ingredients-main/__hint-text/ingredients__hint-text.css
@@ -5,3 +5,11 @@
     margin-top: 0;
     width: 250px;
 }
+
+@media all and (max-width: 1450px) and (min-width: 1000px) {
+    .ingredients__hint-text{
+        font-size: 15px;
+        width: 210px;
+    }
+
+}
