--- a/css/ingredients/ingredients-main/__hint/ingredients__hint.css
+++ b/css/ingredients/ingredients-main/__hint/ingredients__hint.css
@@ -10,3 +10,18 @@
 .ingredients__hint img{
     transform: translate(-60px, 37px);
 }
+
+@media all and (max-width: 1450px) and (min-width: 1000px){
+    .ingredients__hint{
+        margin-top: 40px;
+    }
+
+    .ingredients__hint img{
+        width: 100px;
+        transform: translate(-60px, 32px);
+    }
+}
+
+@media all and (max-width: 1000px){
+
+}
