--- a/css/ingredients/ingredients-main/__names-item/ingredients__names-item.css
+++ b/css/ingredients/ingredients-main/__names-item/ingredients__names-item.css
@@ -22,3 +22,14 @@
     max-width: 24px;
     max-height: 24px;
 }
+
+@media all and (max-width: 1450px) and (min-width: 1000px){
+    .ingredients__names-item h3{
+        font-size: 12px;
+    }
+
+    .ingredients__names-item img{
+        max-width: 20px;
+        max-height: 20px;
+    }
+}
