--- a/css/ingredients/ingredients-main/__socials/ingredients__socials.css
+++ b/css/ingredients/ingredients-main/__socials/ingredients__socials.css
@@ -7,3 +7,17 @@
     width: 300px;
     margin-top: 100px;
 }
+
+@media all and (max-width: 1450px) and (min-width: 1000px){
+    .ingredients__socials{
+        width: 200px;
+        margin-top: 40px;
+    }
+}
+
+@media all and (max-width: 1000px){
+    .ingredients__socials{
+        width: 200px;
+        margin: 40px auto 0;
+    }
+}
