--- a/css/ingredients/ingredients-main/ingredients-main.css
+++ b/css/ingredients/ingredients-main/ingredients-main.css
@@ -5,5 +5,12 @@
     flex-direction: row;
     justify-content: center;
 
-    width: 1840px;
+    max-width: 1840px;
+}
+
+@media all and (max-width: 1000px){
+    .ingredients-main{
+        flex-direction: column;
+    }
+
 }
