--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -25,6 +25,7 @@
 @import "../css/ingredients/ingredients-main/__names/ingredients__names.css"
 @import "../css/ingredients/ingredients-main/__names-item/ingredients__names-item.css"
 @import "../css/ingredients/ingredients-main/__socials/ingredients__socials.css"
+@import "../css/ingredients/ingredients-main/__socials-item/ingredients__socials-item.css"
 @import "../css/ingredients/ingredients-main/__hint/ingredients__hint.css"
 @import "../css/ingredients/ingredients-main/__hint-text/ingredients__hint-text.css"
 @import "../css/ingredients/ingredients-main/__logo/ingredients__logo.css"
@@ -61,6 +62,10 @@ body
   background-position-y: top
   min-height: 100%
   height: 100%
+
+@media all and (max-width: 1000px)
+  body
+    background-position-x: 32%
 
 .product-body
   background-image: url("../img/background.png")
