--- a/css/ingredients/ingredients-main/__hint-text/ingredients__hint-text.css
+++ b/css/ingredients/ingredients-main/__hint-text/ingredients__hint-text.css
@@ -13,3 +13,11 @@
     }
 
 }
+
+@media all and (max-width: 1450px){
+    .ingredients__hint-text{
+        font-size: 18px;
+        width: 250px;
+        margin-left: 5px;
+    }
+}
