--- a/css/ingredients/ingredients-main/__number-image/ingredients__number-image.css
+++ b/css/ingredients/ingredients-main/__number-image/ingredients__number-image.css
@@ -14,3 +14,9 @@
         width: 50px;
     }
 }
+
+@media all and (max-width: 1000px) {
+    .ingredients__number-image{
+        width: 24px;
+    }
+}
