--- a/css/ingredients/ingredients.css
+++ b/css/ingredients/ingredients.css
@@ -13,3 +13,9 @@
 .ingredients--hidden{
     display: none;
 }
+
+@media all and (max-width: 1000px) {
+    .ingredients{
+        align-items: flex-start;
+    }
+}
