--- a/styles/max-life.css
+++ b/styles/max-life.css
@@ -31,6 +31,7 @@
 @import url(../css/ingredients/ingredients-main/__logo/ingredients__logo.css);
 @import url(../css/ingredients/ingredients-main/__numbers/ingredients__numbers.css);
 @import url(../css/ingredients/ingredients-main/__numbers-item/ingredients__numbers-item.css);
+@import url(../css/ingredients/ingredients-main/__arrow/ingredients__arrow.css);
 @import url(../css/presentation/presentation.css);
 @import url(../css/presentation/presentation-main/__socials/presentation__socials.css);
 @import url(../css/presentation/presentation-main/__socials-item/presentation__socials-item.css);
