--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -31,6 +31,7 @@
 @import "../css/ingredients/ingredients-main/__logo/ingredients__logo.css"
 @import "../css/ingredients/ingredients-main/__numbers/ingredients__numbers.css"
 @import "../css/ingredients/ingredients-main/__numbers-item/ingredients__numbers-item.css"
+@import "../css/ingredients/ingredients-main/__arrow/ingredients__arrow.css"
 @import "../css/presentation/presentation.css"
 @import "../css/presentation/presentation-main/__socials/presentation__socials.css"
 @import "../css/presentation/presentation-main/__socials-item/presentation__socials-item.css"
