--- a/css/page-wrapper/product/product-main/__comment/product-main__comment.css
+++ b/css/page-wrapper/product/product-main/__comment/product-main__comment.css
@@ -37,3 +37,9 @@
         font-size: 28px;
     }
 }
+
+@media all and (max-width: 300px) {
+    .product-main__comment p{
+        font-size: 10px;
+    }
+}
