--- a/css/page-wrapper/product/product-main/__title/product-main__title.css
+++ b/css/page-wrapper/product/product-main/__title/product-main__title.css
@@ -33,3 +33,9 @@
         margin-bottom: 0;
     }
 }
+
+@media all and (max-width: 300px) {
+    .product-main__title h1{
+        font-size: 18px;
+    }
+}
