--- a/css/ingredients/ingredients-main/__description/ingredients__description.css
+++ b/css/ingredients/ingredients-main/__description/ingredients__description.css
@@ -19,3 +19,10 @@
         margin: 40px auto 0;
     }
 }
+
+@media all and (max-width: 300px){
+    .ingredients__description{
+        width: 260px;
+        margin: 40px auto 0;
+    }
+}
