--- a/css/ingredients/ingredients-main/__names-item/ingredients__names-item.css
+++ b/css/ingredients/ingredients-main/__names-item/ingredients__names-item.css
@@ -33,3 +33,14 @@
         max-height: 20px;
     }
 }
+
+@media all and (max-width: 300px){
+    .ingredients__names-item h3{
+        font-size: 16px;
+    }
+
+    .ingredients__names-item img{
+        max-width: 20px;
+        max-height: 20px;
+    }
+}
