--- a/css/ingredients/ingredients-main/__numbers-container/numbers/numbers.css
+++ b/css/ingredients/ingredients-main/__numbers-container/numbers/numbers.css
@@ -207,6 +207,76 @@
     }
 }
 
+@media all and (max-width: 300px){
+    .number-1{
+        top: 69px;
+        left: 14px;
+    }
+
+    .number-2{
+        top: 114px;
+        left: 3px;
+    }
+
+    .number-3{
+        top: 60px;
+        left: 122px;
+    }
+
+    .number-4{
+        top: 80px;
+        left: -20px;
+    }
+
+    .number-5{
+        top: 131px;
+        left: 73px;
+    }
+
+    .number-6{
+        top: 149px;
+        left: 122px;
+    }
+
+    .number-7{
+        top: 137px;
+        left: 191px;
+    }
+    .number-8{
+        top: 156px;
+        left: 90px;
+    }
+
+    .number-9{
+        top: 156px;
+        left: 38px;
+    }
+    .number-10{
+        top: 115px;
+        left: -29px;
+    }
+
+    .number-11{
+        top: 91px;
+        left: -48px;
+    }
+
+    .number-12{
+        top: 101px;
+        left: 177px;
+    }
+
+    .number-13{
+        top: 111px;
+        left: 115px;
+    }
+
+    .number-14{
+        top: 150px;
+        left: -30px;
+    }
+}
+
 
 
 
