--- a/css/ingredients/ingredients-main/__socials/ingredients__socials.css
+++ b/css/ingredients/ingredients-main/__socials/ingredients__socials.css
@@ -21,3 +21,10 @@
         margin: 40px auto 0;
     }
 }
+
+@media all and (max-width: 300px){
+    .ingredients__socials{
+        width: 240px;
+        margin: 40px auto 0;
+    }
+}
