--- a/css/page-wrapper/page-wrapper.css
+++ b/css/page-wrapper/page-wrapper.css
@@ -6,7 +6,8 @@
     min-height: 100%;
     height: 100%;
 
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .page-wrapper--hidden{
@@ -15,4 +16,10 @@
 
 .page-wrapper--blurred{
     backdrop-filter: blur(8px);
+}
+
+@media all and (max-width: 1000px){
+    .page-wrapper{
+        overflow-y: auto;
+    }
 }
