--- a/css/page-wrapper/product/product-main/__description/product-main__description.css
+++ b/css/page-wrapper/product/product-main/__description/product-main__description.css
@@ -26,3 +26,13 @@
         max-width: 800px;
     }
 }
+
+@media all and (max-width: 300px){
+    .product-main__description{
+        max-width: 800px;
+        width: 280px;
+        margin-left: 40px;
+        margin-right: 0;
+        margin-top: 70px;
+    }
+}
