--- a/css/page-wrapper/product/product-main/__product-image/product-main__product-image.css
+++ b/css/page-wrapper/product/product-main/__product-image/product-main__product-image.css
@@ -43,3 +43,14 @@
         max-width: 240px;
     }
 }
+
+@media all and (max-width: 300px){
+    .product-main__product-image{
+        margin-left: 0;
+        margin-top: 0;
+        transition-duration: 0.3s;
+        min-width: 140px;
+        max-width: 140px;
+        transform: translate(0, -8%);
+    }
+}
