--- a/css/presentation/presentation-main/__popup-menu/presentation__popup-menu.css
+++ b/css/presentation/presentation-main/__popup-menu/presentation__popup-menu.css
@@ -7,9 +7,11 @@
     text-align: center;
     backdrop-filter: brightness(20%);
 
-    height: 920px;
+    height: 100%;
+    min-height: 100%;
 }
 
 .presentation__popup-menu--hidden{
     display: none;
 }
+
