--- a/css/presentation/presentation-main/__to-main-page/presentation__to-main-page.css
+++ b/css/presentation/presentation-main/__to-main-page/presentation__to-main-page.css
@@ -19,3 +19,21 @@
 .presentation__to-main-page h3{
     font-size: 24px;
 }
+
+@media all and (max-width: 900px){
+    .presentation__to-main-page{
+        margin-top: 50px;
+    }
+    .presentation__to-main-page h3{
+        font-size: 18px;
+    }
+}
+
+@media all and (min-width: 2000px) {
+    .presentation__to-main-page{
+        margin-top: 300px;
+    }
+    .presentation__to-main-page h3{
+        font-size: 36px;
+    }
+}
